--- a/index.html
+++ b/index.html
@@ -48,15 +48,14 @@
           </nav>
         </div>
         <div class="row row-cols-1 row-cols-md-1 row-cols-lg-2 py-5">
-          <div class="col">
+          <div class="cols-lg-6 pb-5">
             <p class="text-gray-400">Computer-controlled digital transistorized with electronic advance</p>
             <h1 class="fs-1 fw-bolder text-white">Honda CBR 300R</h1>
             <p class="text-gray-400 pe-5">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
             <a class="bg-red px-5 py-2 text-decoration-none text-white" href="#">Purchase</a>
           </div>
-          </div>
-          <div class="col pb-3">
-            <img class="banner-img" src="images/header-bike.png" alt="">
+          <div class="cols-lg-6 pb-3">
+            <img class="d-block w-100" src="images/header-bike.png" alt="">
           </div>
         </div>
       </div>
@@ -161,11 +160,11 @@
           </div>
           <div class="row row-cols-1 row-cols-md-1 row-cols-lg-2 align-items-center">
             <div class="col">
-              <div class="According-img mx-2">
-                <img src="images/faq.png" alt="">
+              <div class="mx-2">
+                <img class="d-block w-100" src="images/faq.png" alt="">
               </div>
             </div>
-            <div class="col">
+            <div class="col mt-4">
               <div class="accordion" id="accordionExample">
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="headingOne">
@@ -219,6 +218,12 @@
             </div>
           </div>
         </section>
+        <!-- bounas section-1 -->
+        <section>
+
+        </section>
+        <!-- bounas section-2 -->
+
       </main>
     <!-- footer section -->
     <footer></footer>
