Add bonus sections

--- a/index.html
+++ b/index.html
@@ -219,11 +219,63 @@
           </div>
         </section>
         <!-- bounas section-1 -->
-        <section>
+        <section class="container my-5">
+          <div class="text-center  my-8">
+            <h1 class="fw-bold mb-4">Actually <span class="text-red">over 80% </span> of two-wheelers sold in <span class="text-green">Bangladesh </span>are locally manufactured.</h1>
+            <div class="d-flex justify-content-center">
+             <img class="d-block w-100 w-custom " src="images/market-value.jpg" alt="">
+            </div>
+          </div>
+          <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
 
+            <div class="col my-2">
+              <div class="card h-100 text-center p-2">
+                <p class="text-sky">Bajaj is fast growing and hold a market share near 53%.</p>
+              </div>
+            </div>
+            <div class="col my-2">
+              <div class="card h-100 text-center p-2">
+                <p class="text-sky">Honda is fast growing and hold a market share near 12%.</p>
+              </div>
+            </div>
+            <div class="col my-2">
+              <div class="card h-100 text-center pt-4">
+                <p class="text-sky">Runner is fast growing and hold a market share near 8%.</p>
+              </div>
+            </div>
+            <div class="col my-2">
+              <div class="card h-100 text-center pt-4">
+                <p class="text-sky">TVS is fast growing and hold a market share near 12%.</p>
+              </div>
+            </div>
+            <div class="col my-2">
+              <div class="card h-100 text-center pt-4">
+                <p class="text-sky">Walton is fast growing and hold a market share near 6%.</p>
+              </div>
+            </div>
+            <div class="col my-2">
+              <div class="card h-100 text-center pt-4">
+                <p class="text-sky">Honda is fast growing and hold a market share near 9%.</p>
+              </div>
+            </div>
+
+          </div>
         </section>
         <!-- bounas section-2 -->
-
+        <section class="container  my-5">
+          <div class="text-center  my-8">
+            <h1 class="fw-bold mb-4">Motorcycle registration process in <span class="text-green">Bangladesh</span>.</h1>
+          </div>
+          <div class="row text-center mx-2">
+            <p class="text-white p-2 my-2 bg-red">Import document</p>
+            <p class="text-white p-2 my-2 bg-red">VAT-11 documents</p>
+            <p class="text-white p-2 my-2 bg-red">Sonali Bank’s Treasury Chalan</p>
+            <p class="text-white p-2 my-2 bg-red">Cash memo</p>
+            <p class="text-white p-2 my-2 bg-red">Customs clearance</p>
+            <p class="text-white p-2 my-2 bg-red">Gate pass</p>
+            <p class="text-white p-2 my-2 bg-red">Owner voter ID card copy</p>
+          </div>
+        </section>
       </main>
     <!-- footer section -->
     <footer></footer>
