--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               </div>
               <div class="col my-5">
                 <div class="card border-0 h-100">
-                  <img src="images/feature-bike.jpg" alt="...">
+                  <img src="images/feature-bike.jpg" class="main-color" alt="...">
                 </div>
               </div>
               <div class="col my-5">
@@ -227,38 +227,36 @@
             </div>
           </div>
           <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
-
             <div class="col my-2">
-              <div class="card h-100 text-center p-2">
+              <div class="card h-100 text-center p-3">
                 <p class="text-sky">Bajaj is fast growing and hold a market share near 53%.</p>
               </div>
             </div>
             <div class="col my-2">
-              <div class="card h-100 text-center p-2">
+              <div class="card h-100 text-center p-3">
                 <p class="text-sky">Honda is fast growing and hold a market share near 12%.</p>
               </div>
             </div>
             <div class="col my-2">
-              <div class="card h-100 text-center pt-4">
+              <div class="card h-100 text-center p-3">
                 <p class="text-sky">Runner is fast growing and hold a market share near 8%.</p>
               </div>
             </div>
             <div class="col my-2">
-              <div class="card h-100 text-center pt-4">
+              <div class="card h-100 text-center p-3">
                 <p class="text-sky">TVS is fast growing and hold a market share near 12%.</p>
               </div>
             </div>
             <div class="col my-2">
-              <div class="card h-100 text-center pt-4">
+              <div class="card h-100 text-center p-3">
                 <p class="text-sky">Walton is fast growing and hold a market share near 6%.</p>
               </div>
             </div>
             <div class="col my-2">
-              <div class="card h-100 text-center pt-4">
+              <div class="card h-100 text-center p-3">
                 <p class="text-sky">Honda is fast growing and hold a market share near 9%.</p>
               </div>
             </div>
-
           </div>
         </section>
         <!-- bounas section-2 -->
