--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <p class="text-gray-400">Computer-controlled digital transistorized with electronic advance</p>
             <h1 class="fs-1 fw-bolder text-white">Honda CBR 300R</h1>
             <p class="text-gray-400 pe-5">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-            <a class="bg-red px-5 py-2 text-decoration-none text-white" href="#">Purchase</a>
+            <a class="bg-red px-5 py-2 text-decoration-none text-white" href="modal.html">Purchase</a>
           </div>
           <div class="cols-lg-6 pb-3">
             <img class="d-block w-100" src="images/header-bike.png" alt="">
@@ -277,7 +277,6 @@
       </main>
     <!-- footer section -->
     <footer></footer>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
