--- a/modal.html
+++ b/modal.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arjun-assignment3</title>
     <!-- Bootstrap css -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- Main css -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/modal.css">
@@ -22,9 +22,10 @@
                 <p>DHAKA (Reuters) - Ride-sharing motorbike services are surging in popularity in the Bangladeshi capital of Dhaka, where nightmare traffic often means that walking is faster than traveling by car or bus.</p>
                 <p>Congestion in Dhaka, one of the world’s most crowded cities with a population of 20 million, eats up 3.2 million working hours per day, according to a 2017 World Bank study. Average traffic speeds have dropped to 7km per hour from 21km/h over the last decade, only slightly faster than the average walking speed.</p>
                 <p>“Sharing a bike ride saves me a lot of time, I can reach anywhere on time,” said Khadija Khan, a private-sector employee who often hitches a bike ride.</p>
-                <p>When you ride a bike you need to carry many papers. <span class="text-green"> Click the button to know more... </span></p>
+                <p>When you ride a bike you need to carry many papers. <span class="text-green"> Click the button to know papers... </span></p>
             </article>
         </div>
+
         <!-- Button trigger modal -->
         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
             Click Here
@@ -41,12 +42,17 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    Registration Certificate.
-                    Driving Licence.
-                    Bike Insurance Policy.
-                    Pollution Under Control Certificate (PUCC)
-                    Fitness Certificate.
-                    Medical Certificate.
+                    1. Registration Certificate.
+                    <br>
+                    2. Driving Licence.
+                    <br>
+                    3. Bike Insurance Policy.
+                    <br>
+                    4. Pollution Under Control Certificate (PUCC)
+                    <br>
+                    5. Fitness Certificate.
+                    <br>
+                    6. Medical Certificate.
                 </div>
                 <div class="modal-footer">
                 <button type="button" class="btn btn-primary">Ok</button>
@@ -54,49 +60,9 @@
             </div>
             </div>
         </div>
-
-        <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-    Launch demo modal
-  </button>
-  
-  <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          ...
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
     </section>
 
-    
 
-    <!-- <h2>When you ride a bike you need to carry many papers. Clicl the button to know more...</h2>
-    <p>
-        Registration Certificate.
-        Driving Licence.
-        Bike Insurance Policy.
-        Pollution Under Control Certificate (PUCC)
-        Fitness Certificate.
-        Medical Certificate.
-    </p> -->
-
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
